--- a/BDA/.classpath
+++ b/BDA/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="D:/ISCTE/3ºAno/3a1s/Engenharia de Software I/Utils Sprint/restfb-2.11.0.jar"/>
 	<classpathentry kind="lib" path="/home/luis/Java/javax.mail.jar"/>
 	<classpathentry kind="lib" path="/home/luis/Java/activation/activation.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
